pickup time fedex

--- a/lib/active_shipping/shipping/carriers/fedex/templates/pickup.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/pickup.xml.erb
@@ -38,7 +38,7 @@
         </PickupLocation>
         <PackageLocation>NONE</PackageLocation>
         <BuildingPartDescription/>
-        <ReadyTimestamp><%= @pickup_time.strftime('%FT%T%:z') %></ReadyTimestamp>
+        <ReadyTimestamp><%= @pickup_time %></ReadyTimestamp>
         <CompanyCloseTime><%= @close_time %></CompanyCloseTime>
       </OriginDetail>
       <PackageCount><%= @package_count %></PackageCount>
