--- a/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
@@ -115,7 +115,7 @@
             </ResponsibleParty>
           </Payor>
         </ShippingChargesPayment> 
-        <% if @declared_value || international? %>
+        <% if @declared? || international? %>
           <CustomsClearanceDetail>
             <DutiesPayment>
               <PaymentType>RECIPIENT</PaymentType>
