fix shipment description bug in template

--- a/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
@@ -152,7 +152,7 @@
             <% else %>               
               <Commodities>
                  <NumberOfPieces><%= @package_count %></NumberOfPieces>
-                 <Description><%= @shipment.description %></Description>
+                 <Description><%= @description %></Description>
                  <CountryOfManufacture>MX</CountryOfManufacture>
                  <Weight>
                     <Units>KG</Units>
